<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/checkponit_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textIsSelectable="true"
            android:visibility="gone" />

        <TextView
            android:id="@+id/checkponit_alarmable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textIsSelectable="true"
            android:visibility="gone" />

        <TextView
            android:id="@+id/checkponit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textIsSelectable="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingRight="10dp" >

        <TextView
            android:id="@+id/checkbox_res_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/checkpoint_res_label"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textIsSelectable="true" />

        <RadioGroup
            android:id="@+id/checkbox_res_group"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:textAppearance="?android:attr/textAppearanceMedium" >

            <RadioButton
                android:id="@+id/checkbox_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkpoint_res_normal"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <RadioButton
                android:id="@+id/checkbox_abnormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkpoint_res_abnormal"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </RadioGroup>
    </LinearLayout>

</LinearLayout>